feat(users): return structured warning details on degraded user reads
Replace the bare-string warning codes on the degraded GET /users/{id}
response with structured WarningDetail objects, aligning the soft-degradation
contract with the RFC 7807 ProblemDetail error style.

- Add WarningDetail record (code, field, message, retryable) beside the response DTO
- Switch GetUserByIdResponse.warnings from List<String> to List<WarningDetail>
- Present taskIds as an empty list instead of null on degradation; the warning is the degradation signal
- Add WarningMessages holder for the fixed warning text
- Update the mapper to build the structured warning and coerce degraded taskIds to []
- Update spec, README, REST Docs and the rest.md partial-success convention

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>